Resolve  Alignments

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,26 @@
     background-image: url('../images/products/background.jpg');
     display: flex;
 }
-  
+ 
+.checkout{
+    font-weight: bold;
+    flex-grow: 1;
+    font-size: 20px;
+}
+
+.path {
+    flex-grow: 1;
+    padding-right:610px;
+}
+
+.Shipping {
+    color: grey;
+}
+
+.confirmation {
+    color: grey;
+}
+
 .upper {
     display: flex;
     border: .5px solid rgb(224,222,228);
@@ -19,15 +38,8 @@
     align-items: center;
 }
 
-.checkout{
-    font-weight: bold;
-    flex-grow: 1;
-}
 
-.path {
-    flex-grow: 1;
-    padding-right:480px;
-}
+
 
 .lower {
     display: flex;
@@ -98,6 +110,7 @@ ul.breadcrumb li+li:before {
     padding-left: 8px;
     color: grey;
     border-bottom: 1px solid lightgrey;
+    font-weight: bold;
 }
 
 .NewCard {
@@ -108,7 +121,14 @@ ul.breadcrumb li+li:before {
     padding-left: 8px;
     height: 0%;
     color: grey;
-    margin-top: 10px ;
+    margin-top: 20px ;
+    font-weight: bold;
+}
+
+.lower-left-down {
+    padding-left: 26%;
+    padding-bottom: 10%;
+    padding-top: 0%;
 }
 
 .lower--left--up-cards {
@@ -126,6 +146,7 @@ ul.breadcrumb li+li:before {
     padding-left: 16%;
     padding-top: 9%;
     padding-bottom: 0%;
+    
 }
 
 .lower--left--up--cards--master  {
@@ -159,12 +180,6 @@ ul.breadcrumb li+li:before {
     padding-bottom: 15%;
 }
 
-.lower-left-down {
-    height: auto;
-    padding-left: 26%;
-    padding-bottom: 10%;
-    padding-top: 0%;
-}
 
 input[type=text] {
     width: 60%;
@@ -201,12 +216,14 @@ input[type=submit] {
     flex: 2;
     border: 1px solid lightgrey;
     width: 100%;
-    background-color: rgb(239, 244, 247);
+    background-color: rgb(243, 244, 245);
     border-top: 0px;
     border-right: 0px;
-    border-bottom: 0px;
 }
+.lower--right--items--border {
+    border-bottom: 1px solid grey;
 
+}
 .lower--right--items {
     height: 15%;
     flex-direction: row;
@@ -214,13 +231,26 @@ input[type=submit] {
 }
 
 .lower--right--image {
-    height: 56%;
+    height: 345%;
     display: block;
-    width: 36%;
+    width: 46%;
     margin-top: 10%;
     margin-left: 5%;
     border: 5px solid rgb(190,186,186);
-    margin-right: 0%;
+}
+
+.lower--right--image1 {
+    height: 55%;
+    display: block;
+    width: 46%;
+    margin-top: 10%;
+    margin-left: 5%;
+    border: 5px solid rgb(190,186,186);
+}
+
+.lower--right--details {
+    padding-right: 70%;
+    padding-bottom: 3%;
 }
 
 .lower--right--quantity {
@@ -228,6 +258,7 @@ input[type=submit] {
     margin-left: -16%;
     font-size: 15px;
     width: 137%;
+
 }
 
 .lower--right--prices {
@@ -237,12 +268,17 @@ input[type=submit] {
     padding-right: 2%;
     justify-content: space-between;
 }
-
+.lower-right-tt {
+ padding-bottom: 10px;
+ padding-top: 30px;
+}
 .lower--right--total {
     border-top: 1px solid rgb(153, 151, 151);
     display: flex;
     justify-content: space-between;
-    padding-top: 20px; 
+    padding-top: 10px; 
+    padding-bottom: 20px;
+
 }
 
 .lower--right--product {
@@ -265,10 +301,6 @@ input[type=submit] {
     padding-right: 2%;
   }
   
-  .lower--right--details {
-    padding-right: 47%;
-
-  }
   
   .lower--right--value {
     padding-top: 4%;
